<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_about"
        style="@style/BigButtonTheme"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_configure_zram"
        style="@style/BigButtonTheme"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:title="@string/action_configure_zram"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_log"
        style="@style/BigButtonTheme"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:orderInCategory="100"
        android:title="@string/action_log"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        style="@style/BigButtonTheme"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_exit"
        style="@style/BigButtonTheme"
        android:icon="@android:drawable/ic_lock_power_off"
        android:orderInCategory="100"
        android:title="@string/action_exit"
        app:showAsAction="ifRoom"/>

</menu>
