<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                tools:context="com.thepriest.andrea.ramtool.About"
                android:padding="10dp"
    >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:background="@mipmap/ic_launcher"
                android:adjustViewBounds="false"
                android:baselineAlignBottom="true"
                />

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                />

            <TextView
                android:text="@string/hello_world"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textUp"/>

            <Button
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/changelog"
                android:id="@+id/buttonChangelog"/>

            <Button
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:id="@+id/buttonClose"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
