<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/imageView2"
            android:src="@mipmap/ic_launcher"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RAMFree"
                    android:id="@+id/textViewRAMFree"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="RAM"
                    android:id="@+id/textViewRAMDetails"
                    android:textSize="@dimen/abc_text_size_small_material"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ZRAM"
                    android:id="@+id/textViewZRAM"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible">

                <Button
                    style="@style/ButtonTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/CleanMemory"
                    android:id="@+id/buttonCleanMemory"
                    android:layout_weight="1"/>

                <Button
                    style="@style/ButtonTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/CleanDropCache"
                    android:id="@+id/buttonCleanDropCache"
                    android:layout_weight="1"/>

                <Button
                    style="@style/ButtonTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/CleanAll"
                    android:id="@+id/buttonCleanAll"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
