<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/black"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.thepriest.andrea.ramtool.Enable_ZRAM_Activity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            android:padding="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingTop="0dp">

            <Switch
                android:id="@+id/switchZRAM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:focusable="true"
                android:text="@string/enable_disable_zram"
                android:textAppearance="@android:style/TextAppearance.Medium"/>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/Total_size_all_disks"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <EditText
                    android:id="@+id/textViewSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:enabled="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:numeric="integer"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:text="300"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="MB"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBarSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="20"/>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="Swappiness:"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <EditText
                    android:id="@+id/textViewSwappiness"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:enabled="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:numeric="integer"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:text="100"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="%"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBarSwappiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="20"/>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="VFS cache pressure:"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>

                <EditText
                    android:id="@+id/textViewVFSCachePressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:enabled="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="number"
                    android:numeric="integer"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:text="150"
                    android:textAppearance="@android:style/TextAppearance.Large"
                    />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="%"
                    android:textAppearance="?android:attr/textAppearanceSmall"/>
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBarVFSCachePressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"/>

            <Space
                android:layout_width="20px"
                android:layout_height="20px"
                />

            <Button
                android:id="@+id/buttonApply"
                style="@style/ButtonTheme"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
